syntax = "proto3";

option go_package = "github.com/BirdyDK/DS-handin3";

service ChittyChat {
    rpc Join (JoinRequest) returns (JoinResponse);
    rpc Leave (LeaveRequest) returns (LeaveResponse);
    rpc Publish (PublishRequest) returns (PublishResponse);
    rpc Subscribe (SubscribeRequest) returns (SubscribeResponse);
}

message JoinRequest {
    string name = 1;
}

message JoinResponse {
    string message = 1;
}

message LeaveRequest {
    string name = 1;
}

message LeaveResponse {
    string message = 1;
}

message PublishRequest {
    string name = 1;
    string message = 2;
    int32 timestamp = 3;
}

message PublishResponse {
    string message = 1;
}

message SubscribeRequest {
    string name = 1;
}

message SubscribeResponse {
    string message = 1;
}
